<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanItemsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="35dp"
        android:text="@string/scan_items_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/camera_button"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="315dp"
        app:srcCompat="@drawable/ic_camera"
        tools:ignore="VectorDrawableCompat" />

    <EditText
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:id="@+id/search_field"
        android:layout_width="275dp"
        android:layout_height="35dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-38dp"
        android:background="#11AA9E9E"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search_product_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_item_button"
        android:layout_marginTop="15dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:text="@string/search_product_button"
        android:backgroundTint="@color/primary"
        android:textAllCaps="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_views"
        android:layout_marginTop="40dp">
    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
