<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="25dp"
    app:contentPadding="5dp"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/view_item_barcode_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/item_barcode" />

        <TextView
            android:id="@+id/view_item_barcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/view_item_barcode_name"
            android:text="TextView" />

        <TextView
            android:id="@+id/view_item_name_name"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/item_name" />

        <TextView
            android:id="@+id/view_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:layout_toEndOf="@+id/view_item_name_name"
            android:text="TextView" />

        <TextView
            android:id="@+id/view_item_price_name"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/item_price" />

        <TextView
            android:id="@+id/view_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_toEndOf="@+id/view_item_price_name"
            android:text="TextView" />

        <TextView
            android:id="@+id/view_item_category_name"
            android:layout_marginTop="60dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/item_category" />

        <TextView
            android:id="@+id/view_item_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="79dp"
            android:textColor="@color/black"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@+id/view_item_category_name"
            android:text="TextView" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>